# glsc

./: Cargo.toml  README.md  harness.c  harness.sh  test.sh  x
glsc_backend/: Cargo.toml
glsc_backend/src/: lib.rs
glsc_hir/: Cargo.toml
glsc_hir/src/: lib.rs
glsc_hir_lower/: Cargo.toml
glsc_hir_lower/src/: lib.rs
glsc_mir/: Cargo.toml
glsc_mir/src/: lib.rs  pretty.rs
glsc_mir_lower/: Cargo.toml
glsc_mir_lower/src/: lib.rs
src/: main.rs
src/c/: test.c  test2.c
