[package]
name = "glsc_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
cranelift = "0.115.1"
cranelift-codegen = "0.115.1"
cranelift-frontend = "0.115.1"
cranelift-module = "0.115.1"
cranelift-object = "0.115.1"
target-lexicon = "0.12.16"

glsc_mir = {path = "../glsc_mir"}
glsc_mir_lower = {path = "../glsc_mir_lower"}